<resources>
    <string name="app_name">Logopedie_2_Andreas_Aerst_Wouter_De_Laet</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start_scherm">StartScherm</string>
    <string name="dialog_username">email</string>
    <string name="tittle_app">beschrijven situatieplaat CAT-NL</string>
    <string name="dialog_password">wachtwoord</string>
    <string name="submit">Submit text</string>
    <string name="efficiëntie">De efficiëntie is</string>
    <string name="substitutiegedrag">Het substitutiegedrag is</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_aanmelden">Aanmelden</string>
    <string name="dialog_annuleer">Annuleren</string>
    <string name="dialog_signin">Meld je aan met:</string>
    <string name="dialog_loginButton">Login</string>
    <string name="dialog_registerButton">Registreer</string>
    <string name="title_activity_writing_test">schriftelijk beschrijven</string>
    <string name="title_activity_speech_to_text_test">mondeling beschrijven</string>
    <string name="naar_start_scherm">Ga naar startscherm</string>
    <string name="naar_speech_to_text">Ga naar speecht to text</string>
    <string name="naar_writing_test">Ga naar schrijf test</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="enter_minutes"># minuten</string>
    <string name="start_timer">Start Timer</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="reset_timer">Reset Timer</string>
    <string name="dialog_patient">Geef patient in</string>
    <string name="dialog_name">Naam</string>
    <string name="dialog_geboorteDatum">Geboortedatum</string>
    <string name="dialog_testDatum">Testdatum</string>
    <string name="dialog_radio0">Man</string>
    <string name="dialog_radio1">Vrouw</string>
    <string name="dialog_geslacht">Geslacht</string>
    <string name="dialog_chronologischeLeeftijd">Chronologische leeftijd</string>
    <string name="dialog_afasie">Soort afasie</string>
    <string name="save">Opslaan</string>
    <string name="timer">00:00:00</string>
    <string name="dialog_datum">Selecteer datum</string>
    <string name="productiviteit">Productiviteit</string>
    <string name="efficientie">Efficiëntie</string>
    <string name="substitutie">Substitutiegedrag</string>
    <string name="coherentie">Coherentie</string>
</resources>
