<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>
            <TextView
                android:id="@+id/patient"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/dialog_patient"
                />
            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/gebDatum"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/dialog_geboorteDatum"
                />
            <EditText
                android:id="@+id/geboortedatum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/testDatum"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/dialog_testDatum"
                />
            <EditText
                android:id="@+id/testdatum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/chronLeeftijd"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/dialog_chronologischeLeeftijd"
                />
            <EditText
                android:id="@+id/chronologischeLeeftijd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/geslachtMV"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/dialog_geslacht"/>
            <EditText
                android:id="@+id/geslacht"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:inputType="text"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/afasie"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/dialog_afasie"/>
            <EditText
                android:id="@+id/soortAfasie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                />
        </TableRow>
    </TableLayout>
</LinearLayout>